--- a/project/news.html
+++ b/project/news.html
@@ -1,13 +1,63 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>
-		News
-	</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Upcoming Game News</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-
+  <section class="services-grid">
+    <div class="service-item">
+      <img src="https://img.icons8.com/?size=100&id=xtLBAIYA3xPv&format=png&color=000000" alt="Livestreaming Icon" class="service-icon">
+      <h3>Call of Duty: Modern Warfare II</h3>
+      <p>The latest entry in the Modern Warfare series is set to redefine tactical warfare. Expect a gripping narrative and stunning visuals.</p>
+      <picture>
+        <source media="(max-width: 799px)" srcset="cod.jpg">
+        <source media="(min-width: 800px)" srcset="cod.jpg">
+        <img src="cod-desktop.jpg" alt="Call of Duty: Modern Warfare II" class="service-image">
+      </picture>
+    </div>
+    <div class="service-item">
+      <img src="https://img.icons8.com/?size=100&id=21919&format=png&color=000000" alt="Droning Icon" class="service-icon">
+      <h3>Starfield</h3>
+      <p>Bethesda's latest RPG, set in the vast expanse of space. Prepare for exploration, crafting, and intergalactic adventures.</p>
+      <picture>
+        <source media="(max-width: 799px)" srcset="starfield.jpg">
+        <source media="(min-width: 800px)" srcset="starfield.jpg">
+        <img src="starfield-desktop.jpg" alt="Starfield" class="service-image">
+      </picture>
+    </div>
+    <div class="service-item">
+      <img src="https://img.icons8.com/?size=100&id=8881&format=png&color=000000" alt="Documentaries Icon" class="service-icon">
+      <h3>The Legend of Zelda: Tears of the Kingdom</h3>
+      <p>Join Link in his next epic adventure. Explore new lands, solve puzzles, and battle fierce enemies in this upcoming release.</p>
+      <picture>
+        <source media="(max-width: 799px)" srcset="zelda.jpg">
+        <source media="(min-width: 800px)" srcset="zelda.jpg">
+        <img src="zelda-desktop.jpg" alt="Zelda: Tears of the Kingdom" class="service-image">
+      </picture>
+    </div>
+    <div class="service-item">
+      <img src="https://img.icons8.com/?size=100&id=25166&format=png&color=000000" alt="Events Icon" class="service-icon">
+      <h3>Final Fantasy XVI</h3>
+      <p>A new chapter in the beloved Final Fantasy series, bringing action-packed combat and a darker storyline.</p>
+      <picture>
+        <source media="(max-width: 799px)" srcset="finalfantasy.jpg">
+        <source media="(min-width: 800px)" srcset="finalfantasy.jpg">
+        <img src="finalfantasy-desktop.jpg" alt="Final Fantasy XVI" class="service-image">
+      </picture>
+    </div>
+    <div class="service-item">
+      <img src="https://img.icons8.com/?size=100&id=kRlKqa4lgYAX&format=png&color=000000" alt="Photoshoot Icon" class="service-icon">
+      <h3>Assassin's Creed Mirage</h3>
+      <p>Return to the stealthy world of Assassins. This time, journey to Baghdad in a quest for justice in the city’s shadows.</p>
+      <picture>
+        <source media="(max-width: 799px)" srcset="acmirage.jpg">
+        <source media="(min-width: 800px)" srcset="acmirage.jpg">
+        <img src="acmirage-desktop.jpg" alt="Assassin's Creed Mirage" class="service-image">
+      </picture>
+    </div>
+  </section>
 </body>
 </html>
