--- a/upcoming.html
+++ b/upcoming.html
@@ -31,7 +31,7 @@
         <div class="upcoming-grid">
             <article class="upcoming-card featured">
                 <div class="upcoming-header">
-                    <img src="https://via.placeholder.com/400x200" alt="GTA VI">
+                    <img src="gta.webp" alt="GTA VI">
                     <div class="release-badge">Early 2025</div>
                     <div class="platforms">
                         <i class="fab fa-playstation" title="PlayStation 5"></i>
